--- a/GamothequeWPF/Views/StatisticView.xaml
+++ b/GamothequeWPF/Views/StatisticView.xaml
@@ -9,7 +9,7 @@
        xmlns:DVC="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="StatisticView" Background="White" ShowsNavigationUI="False">
+      Title="StatisticView" ShowsNavigationUI="False">
     <Page.DataContext>
         <vm:StatisticViewModel/>
     </Page.DataContext>
@@ -29,15 +29,31 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <DVC:Chart Grid.Row="2">
+        <DVC:Chart Grid.Row="2" Title="Répartition des jeux par note">
+            <DVC:Chart.LegendStyle>
+                <Style TargetType="DV:Legend">
+                    <Setter Property="Width" Value="0" />
+                </Style>
+            </DVC:Chart.LegendStyle>
             <DVC:Chart.Series>
                 <DVC:BarSeries  ItemsSource="{Binding GameByMarkStats}" IndependentValueBinding="{Binding Path=Key}" DependentValueBinding="{Binding Path=Value}">
+                    <DVC:BarSeries.DependentRangeAxis>
+                        <DVC:LinearAxis Interval="1" Minimum="0" Maximum="5" Orientation="X"/>
+                    </DVC:BarSeries.DependentRangeAxis>
                 </DVC:BarSeries>
             </DVC:Chart.Series>
         </DVC:Chart>
-        <DVC:Chart Grid.Row="2" Grid.Column="2">
+        <DVC:Chart Grid.Row="2" Grid.Column="2" Title="Répartition des jeux par catégorie">
+            <DVC:Chart.LegendStyle>
+                <Style TargetType="DV:Legend">
+                    <Setter Property="Width" Value="0" />
+                </Style>
+            </DVC:Chart.LegendStyle>
             <DVC:Chart.Series>
                 <DVC:BarSeries  ItemsSource="{Binding GameByTypeStats}" IndependentValueBinding="{Binding Path=Key}" DependentValueBinding="{Binding Path=Value}">
+                    <DVC:BarSeries.DependentRangeAxis>
+                        <DVC:LinearAxis Interval="1" Minimum="0" Orientation="X"/>
+                    </DVC:BarSeries.DependentRangeAxis>
                 </DVC:BarSeries>
             </DVC:Chart.Series>
         </DVC:Chart>
