--- a/GamothequeWPF/Views/GameDetailsView.xaml
+++ b/GamothequeWPF/Views/GameDetailsView.xaml
@@ -152,7 +152,20 @@
                     <Label Content="Date de sortie"/>
                 </Grid>
                 <Grid Grid.Row="21">
-                    <TextBox Text="{Binding Path=SelectedGame.ReleaseDate}"/>
+                    <DatePicker SelectedDate="{Binding SelectedGame.ReleaseDate}">
+                        <DatePicker.Resources>
+                            <Style TargetType="{x:Type DatePickerTextBox}">
+                                <Setter Property="Control.Template">
+                                    <Setter.Value>
+                                        <ControlTemplate>
+                                            <TextBox Text="{Binding Path=SelectedDate, StringFormat='dd/MM/yyyy', 
+                                                 RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </DatePicker.Resources>
+                    </DatePicker>
                 </Grid>
                 <Grid Grid.Row="22">
                     <Label Content="Durée de vie"/>
